# pioneer

./: Doxyfile.in  Makefile.am  TODO  autogen.sh  changelog  control  copyright  pioneers-ai.dirs  pioneers-builddep  pioneers-client.menu  pioneers-meta-server.default  pioneers-meta-server.init  pioneers-meta-server.maintscript  pioneers-meta-server.postrm  pioneers-meta-server.templates  pioneers-meta-server.undocumented  pioneers-server-data.install  pioneers.nsi.in  release-checklist
pioneers/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.Cygwin  README.MinGW  README.subversion  TODO  acconfig.h  autogen.sh  configure.ac  getVersions.sh  gnocatan.spec  pioneers.nsi.in  pioneers.spec.in  rules.make
pioneers/MinGW/: Makefile.am  README.txt  loaders.cache  pioneers.nsi.in
pioneers/admin-scripts/: list.sh  meta.sh
pioneers/ai/: Makefile  Makefile.am  Makefile.in  ai.c  client.c  client.h  computer.c  computer.h  develop.c  discard.c  greedy.c  player.c  player.h  plenty.c  resource.c  robber.c  stock.c  trade.c
pioneers/client/: Makefile.am  admin-gtk.c  build.c  callback.h  chat.c  client.c  client.h  config-gnome.c  connect.c  develop.c  gameover.c  gnocatan.c  gold.c  gui.c  gui.h  guimap.c  histogram.c  histogram.h  i18n.c  identity.c  legend.c  monopoly.c  name.c  player.c  player.h  plenty.c  polygon.c  resource.c  robber.c  settingscreen.c  setup.c  stock.c  theme.c  theme.h  trade.c  turn.c
pioneers/client/ai/: .cvsignore  Makefile.am  ai.c  ai.h  genetic.c  genetic_core.c  greedy.c  lobbybot.c
pioneers/client/common/: Makefile.am  authors.h  build.c  callback.c  callback.h  chat.c  client.c  client.h  develop.c  i18n.c  i18n.h  main.c  player.c  resource.c  robber.c  setup.c  stock.c  turn.c
pioneers/client/gtk/: Makefile.am  admin-gtk.c  audio.c  avahi-browser.c  avahi.c  callbacks.c  chat.c  client.ui  connect.c  develop.c  discard.c  frontend.c  frontend.h  gameover.c  gold.c  gui.c  gui.h  guimap.c  guimap.h  histogram.c  histogram.h  identity.c  interface.c  legend.c  monopoly.c  name.c  notification.h  offline.c  player.c  plenty.c  polygon.h  quote-view.c  quote.c  resource-table.c  resource-table.h  resource-view.gob  resource.c  settingscreen.c  state.c  theme.c  (+2 more)
pioneers/client/help/: Makefile.am
pioneers/common/: .cvsignore  Makefile.am  buildrec.c  buildrec.h  cards.c  cards.h  common_glib.c  common_glib.h  common_gui.h  cost.c  cost.h  deck.c  driver.c  driver.h  game-list.c  game.c  game.h  gettext.c  gettext.h  gnocatan-path.h.in  log.c  log.h  map.c  map.h  map_query.c  meta.h  mt_rand.c  mt_rand.h  network.c  network.h  quoteinfo.c  quoteinfo.h  random.c  set.h  state.c  state.h
pioneers/common/gtk/: Makefile.am  aboutbox.c  aboutbox.h  colors.c  colors.h  common_gtk.c  common_gtk.h  config-gnome.c  config-gnome.h  game-rules.c  game-rules.h  game-settings.c  game-settings.h  gtkbugs.c  gtkbugs.h  gtkcompat.h  guimap.c  guimap.h  map-icons.c  metaserver.c  metaserver.h  player-icon.c  player-icon.h  polygon.c  polygon.h  select-game.c  select-game.h  theme.c  theme.h
pioneers/debian/: .cvsignore  README.debian  changelog  control  copyright  gnocatan-ai.files  gnocatan-ai.menu  gnocatan-client.manpages  gnocatan-client.menu  gnocatan-help.install  gnocatan-server-console.manpages  gnocatan-server-console.menu  gnocatan-server-data.install  gnocatan-server-gtk.install  gnocatan-server-gtk.menu  gnocatan-server.files  menu  pioneers-ai.install  pioneers-ai.menu  pioneers-builddep  pioneers-client.install  pioneers-console.config  pioneers-console.init  pioneers-console.install  pioneers-console.manpages  pioneers-console.postinst  pioneers-help.install  pioneers-meta-server.init  pioneers-metaserver.config  pioneers-metaserver.init  pioneers-metaserver.templates  pioneers-server-console.menu  pioneers-server-gtk.install  pioneers-server-gtk.menu  pioneers.install  release-checklist  rules
pioneers/debian/patches/: series
pioneers/debian/po/: cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  vi.po
pioneers/debian/upstream/: metadata
pioneers/docs/: Makefile.am  README.game  README.release  gnocatan-server-console.6  gnocatan-server-gtk.6  gnocatan.6  pioneers-meta-server.6  pioneers-metaserver.6  pioneers-server-console.6  pioneers-server-gtk.6  pioneers.6
pioneers/editor/: Makefile.am
pioneers/editor/gtk/: .cvsignore  Makefile.am  editor.c  editor.ui  game-buildings.c  game-devcards.c  game-devcards.h  game-parameters.c  game-resources.c  guimap.h  pioneers-editor.rc
pioneers/meta-server/: Makefile.am  README.protocol  main.c  meta-report
pioneers/metaserver/: main.c
pioneers/po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  af.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  fr.po  gl.po  gnocatan.pot  hu.po  it.po  ja.po  nl.po  pioneers.pot  pt.po  sv.po  zh_CN.po
pioneers/server/: .cvsignore  Makefile.am  Mini_another_swimming_pool_in_the_wall.game  admin.c  admin.h  archipel_gold.game  avahi.c  buildutil.c  coeur.game  conquest+ports.game  conquest.game  crane_island.game  develop.c  discard.c  glib-driver.c  glib-driver.h  gnocatan-server-console.h  gold.c  iles.game  into-the-desert.map  main.c  meta.c  player.c  pregame.c  resource.c  robber.c  seafarers-gold.game  seafarers.game  server.c  server.h  trade.c  turn.c  x.game
pioneers/server/gtk/: Makefile.am  main.c  pioneers-server.desktop.in
tags/RELEASE_0_6_1/pioneers/: .cvsignore  README  acconfig.h  configure.ac
trunk/pioneers/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.Cygwin  README.MinGW  README.subversion  TODO  acconfig.h  autogen.sh  configure.ac  gnocatan.spec  gnocatan.spec.in  pioneers.nsi.in  pioneers.spec.in  rules.make
trunk/pioneers/MinGW/: Makefile.am  README.txt  pioneers.nsi.in
trunk/pioneers/admin-scripts/: locallobby.sh  meta.sh
trunk/pioneers/ai/: Makefile.am  ai.c  client.c  client.h  computer.c  computer.h  develop.c  discard.c  greedy.c  player.c  player.h  resource.c  trade.c  turn.c
trunk/pioneers/po/: af.po  (+21 more)
(+1858 files in other folders)
